# A075F_KERNEL_SOURCE

./: README.md  README_Kernel.txt  build_kernel.sh
kernel/kernel_device_modules-6.12/drivers/gpu/drm/panel/hs07/: BUILD.bazel  lcd_default_mipi_hd_video.c  lcd_gc7272_xx_boe_mipi_hd_video.c  lcd_gc7272_xx_hsd_mipi_hd_video.c  lcd_hx83108d_xx_hkc_mipi_hd_video.c  lcd_nl9916x_ld_hkc_mipi_hd_video.c  lcd_nl9916x_txd_boe_hh_mipi_hd_video.c  lcd_nl9916x_txd_boe_htr_mipi_hd_video.c  lcd_nl9916x_txd_boe_mipi_hd_video.c  lcd_nl9916x_txd_csot_mipi_hd_video.c  lcd_nl9916x_xx_tm_mipi_hd_video.c
kernel/kernel_device_modules-6.12/drivers/gpu/drm/panel/hst11/: BUILD.bazel  Makefile  lcd_default_mipi_fhd_video_hst11.c  lcd_hx83102e_lc_hkc_video_hst11.c  lcd_hx83102g_xy_inx_video.c  lcd_jd9366tc_ld_hkc_video.c  lcd_jd9366tc_lx_hkc_video.c  lcd_jd9366tc_xy_csot_video.c
kernel/kernel_device_modules-6.12/drivers/gpu/drm/panel/ot11/: BUILD.bazel  Makefile  lcd_default_mipi_fhd_video.c  lcd_hx83102e_cd_inx_new_video.c  lcd_hx83102e_cd_inx_video.c  lcd_hx83102e_gx_hsd_incell_video.c  lcd_hx83102e_lc_hkc_video.c  lcd_hx83102e_xx_inx_video.c  lcd_jd9366tc_xx_hkc_video.c  lcd_nl9951_gx_boe_video.c  lcd_nt36523d_lc_hsd_video.c
kernel/kernel_device_modules-6.12/drivers/input/fingerprint/hs07/: BUILD.bazel  Kconfig  Makefile  fingerprint_sysfs.c
kernel/kernel_device_modules-6.12/drivers/input/fingerprint/hs07/goodix/: BUILD.bazel  Kconfig  gf_spi_tee.c  gf_spi_tee.h
kernel/kernel_device_modules-6.12/drivers/input/fingerprint/hs07/jiiov/: BUILD.bazel  Kconfig  custom.c  jiiov_config.h  jiiov_log.h  jiiov_netlink.c  jiiov_netlink.h  jiiov_platform.c  jiiov_platform.h
kernel/kernel_device_modules-6.12/drivers/input/fingerprint/hs07/silead/: BUILD.bazel  Kconfig  Makefile  silead_fp.c  silead_fp.h  silead_fp_spi.c  silead_fp_stub.c  silead_fp_stub.h
kernel/kernel_device_modules-6.12/drivers/input/hs07_sar/hx9031as/: BUILD.bazel  Makefile  hx9031as.c  hx9031as.h
kernel/kernel_device_modules-6.12/drivers/input/hs07_sar/sx9378/: BUILD.bazel  Makefile  sx937x.c
kernel/kernel_device_modules-6.12/drivers/input/hst11_sar/: BUILD.bazel  Makefile  sensor_fac_node.c  sensor_user_node.h
kernel/kernel_device_modules-6.12/drivers/input/hst11_sar/hx9031as/: BUILD.bazel  hx9031as.c
kernel/kernel_device_modules-6.12/drivers/input/hst11_sar/sx9378/: BUILD.bazel  sx937x.c
kernel/kernel_device_modules-6.12/drivers/input/keyboard/: BUILD.bazel  Makefile  mtk-kpd.c  mtk-pmic-keys.c
kernel/kernel_device_modules-6.12/drivers/input/sar/: BUILD.bazel  Makefile  sensor_fac_node.c  sensor_fac_node.h  sensor_user_node.c  sensor_user_node.h  sx933x.c
kernel/kernel_device_modules-6.12/drivers/input/touchscreen/hs07/touch_common/: BUILD.bazel  sec_cmd.c  touch_feature.c  touch_feature.h
kernel/kernel_device_modules-6.12/drivers/input/touchscreen/hst11/jdchipset/: BUILD.bazel  Makefile  jadard_common.c  jadard_common.h  jadard_debug.c  jadard_ic_JD9366T.c  jadard_module.c  jadard_platform.c  jadard_platform.h  jadard_sorting.c
kernel/kernel_device_modules-6.12/drivers/misc/huaqin/hperf/: BUILD.bazel  Makefile  hperf_handle_event.c  hperf_handle_internal.h  hperf_handle_kinfo.c  hperf_handle_mem.c  hperf_handle_other.c  hperf_handle_power.c  hperf_handle_sched.c  hperf_kernel_api.h  hperf_log.h  hperf_main.c  hperf_monitor.c
kernel/kernel_device_modules-6.12/drivers/misc/mediatek/board_id/: BUILD.bazel  board_id_status.c
kernel/kernel_device_modules-6.12/drivers/misc/mediatek/cam_cal/src/: BUILD.bazel
kernel/kernel_device_modules-6.12/drivers/misc/mediatek/cam_cal/src/custom/: Makefile  cam_cal_list.c  eeprom_i2c_a0902backhi846st_driver.c  eeprom_i2c_a0902backhi846st_driver.h  eeprom_i2c_a0904backsc820csst_driver.c  eeprom_i2c_a0904backsc820csst_driver.h
kernel/kernel_device_modules-6.12/drivers/misc/mediatek/imgsensor/src/: BUILD.bazel
kernel/kernel_device_modules-6.12/drivers/misc/mediatek/imgsensor/src/common/v1_1/: imgsensor.c  imgsensor_proc.c  imgsensor_pwr_seq.c  imgsensor_sensor_list.c  imgsensor_sensor_list.h
kernel/kernel_device_modules-6.12/drivers/misc/mediatek/imgsensor/src/common/v1_1/a0701cxtdepthsc201cs_mipi_raw/: a0701cxtdepthsc201cs_mipi_raw.c
kernel/kernel_device_modules-6.12/drivers/misc/mediatek/imgsensor/src/common/v1_1/a0701txdbacks5kjn1_mipi_raw/: a0701txdbacks5kjn1_mipi_raw.c
kernel/kernel_device_modules-6.12/drivers/misc/mediatek/typec/tcpc/: BUILD.bazel  Kconfig  Makefile  pd_core.c  pd_dbg_info.c  pd_dpm_core.c  pd_dpm_pdo_select.c  pd_dpm_reaction.c  pd_policy_engine.c  pd_policy_engine_com.c  pd_policy_engine_snk.c  pd_policy_engine_src.c  pd_process_evt.c  pd_process_evt_com.c  pd_process_evt_snk.c  pd_process_evt_src.c  pd_process_evt_tcp.c  pd_process_evt_vdm.c  tcpc_cps8851.c  tcpc_et7304.c  tcpc_scv89601p_pd.c  tcpc_upm6922p.c  tcpci.c  tcpci_alert.c  tcpci_core.c  tcpci_event.c  tcpci_timer.c  tcpci_typec.c  tcpm.c
kernel/kernel_device_modules-6.12/drivers/misc/mediatek/typec/tcpc/inc/: et7304.h  pd_core.h  pd_dpm_core.h  pd_policy_engine.h  std_tcpci_v10.h  tcpci.h  tcpci_config.h  tcpci_core.h  tcpci_event.h  tcpci_pd30_config.h  tcpci_pd_config.h  tcpci_timer.h  tcpm_pd.h
kernel/kernel_device_modules-6.12/drivers/misc/mediatek/typec/tcpc/tcpc_aw35615/: PDPolicy.c  TypeC.c  aw35615_driver.c  platform_helpers.c
kernel/kernel_device_modules-6.12/drivers/misc/mediatek/typec/tcpc/tcpc_aw35615/vdm/DisplayPort/: dp.c
kernel/kernel_device_modules-6.12/drivers/power/supply/battery/battery_auth/sle956681/: BUILD.bazel  sec_auth_sle956681.c  sec_auth_sle956681.h
kernel/kernel_device_modules-6.12/drivers/power/supply/charge_pump/: BUILD.bazel  Makefile  nx853x_charger.c  pd_policy_manager.c  sgm41608_charger.c  sp2131_charger.c  sp2131_reg.h  upm6726_charger.c
kernel/kernel_device_modules-6.12/drivers/usb/notify/: BUILD.bazel  dock_notify.c  usb_notifier.c  usb_notify_sysfs.c
kernel/kernel_device_modules-6.12/drivers/usb/ss_function/: BUILD.bazel  f_ss_mon_gadget.c
kernel/kernel_device_modules-6.12/sound/soc/codecs/aw87xxx/: BUILD.bazel  Makefile  aw87xxx.c
(+405 files in other folders)
