load("//build/bazel_mgk_rules:mgk_ddk_ko.bzl", "define_mgk_ddk_ko")
load("@mgk_info//:kernel_version.bzl","kernel_version",)

package(
    default_visibility = [
        "//visibility:public",
    ],
)

define_mgk_ddk_ko(
    name = "mtk-kpd",
    srcs = [
        "mtk-kpd.c",
    ],
    copts = [
        "-I$(DEVICE_MODULES_PATH)/drivers/misc/mediatek/include/",
    ],
    header_deps = [
        "//kernel_device_modules-{}/drivers/misc/mediatek/eccci:ccci_header".format(kernel_version),
        "//kernel_device_modules-{}/drivers/misc/mediatek/eccci/fsm:ccci_fsm_header".format(kernel_version),
    ],
)

define_mgk_ddk_ko(
    name = "mtk-pmic-keys",
    srcs = [
        "mtk-pmic-keys.c",
    ],
    ko_deps = [
        "//kernel_device_modules-{}/drivers/input/keyboard:mtk-kpd".format(kernel_version),
    ],
)

filegroup(
    name = "ddk_kconfigs",
    srcs = glob([
        "**/Kconfig",
    ]),
)
