load("//build/bazel_mgk_rules:mgk_ddk_ko.bzl", "define_mgk_ddk_ko")
load("//build/kernel/kleaf:kernel.bzl", "ddk_headers")
load("@mgk_info//:kernel_version.bzl", "kernel_version")

package(
    default_visibility = [
        "//visibility:public",
    ],
)

filegroup(
    name = "ddk_kconfigs",
    srcs = glob([
        "**/Kconfig",
    ]),
)

filegroup(
    name = "ddk_srcs",
    srcs = glob([
          "**/*.c",
          "**/*.h",
    ]),
)

define_mgk_ddk_ko(
    name = "usb_notify_layer",
    srcs = [
        "usb_notify.c",
        "usb_notify_sysfs.c",
        "dock_notify.c",
    ],
    hdrs = [
        "usb_notify_sysfs.h",
        "dock_notify.h",
        "host_notify_class.h",
    ],
    includes = ["."],
    conditional_srcs = {
        "CONFIG_USB_HOST_NOTIFY": {
            True: [
                "host_notify_class.c",
            ],
        },
        "CONFIG_USB_EXTERNAL_NOTIFY": {
            True: [
                "external_notify.c",
            ],
        },
        "CONFIG_USB_NOTIFY_PROC_LOG": {
            True: [
                "usblog_proc_notify.c",
            ],
        },
    },
    copts = [
        "-I$(srctree)/drivers/usb/",
        "-I$(DEVICE_MODULES_PATH)/drivers/usb/notify/",
        "-I$(DEVICE_MODULES_PATH)/drivers/power/supply",
        "-I$(DEVICE_MODULES_PATH)/drivers/misc/mediatek/include/",
    ],
    out = "usb_notify_layer.ko",
)

define_mgk_ddk_ko(
    name = "usb_notifier",
    srcs = [
        "usb_notifier.c",
    ],
    hdrs = glob(["**/*.h"]),
    includes = ["."],
    copts = [
        "-I$(srctree)/drivers/usb/",
        "-I$(DEVICE_MODULES_PATH)/drivers/usb/notify/",
    ],
    ko_deps = [
        "//kernel_device_modules-{}/drivers/usb/notify:usb_notify_layer".format(kernel_version),
    ],
    out = "usb_notifier.ko",
)
