load("//build/bazel_mgk_rules:mgk_ddk_ko.bzl", "define_mgk_ddk_ko")
load("//build/kernel/kleaf:kernel.bzl", "ddk_headers")
load("@mgk_info//:kernel_version.bzl", "kernel_version")

package(
    default_visibility = [
        "//visibility:public",
    ],
)

filegroup(
    name = "ddk_kconfigs",
    srcs = glob([
        "**/Kconfig",
    ]),
)

filegroup(
    name = "ddk_srcs",
    srcs = glob([
          "**/*.c",
          "**/*.h",
    ]),
)

define_mgk_ddk_ko(
    name = "usb_f_conn_gadget",
    srcs = [
        "f_conn_gadget.c",
    ],
    hdrs = glob([
            "f_conn_gadget.ioctl.h",
    ]),
    includes = ["."],
    copts = [
        "-I$(srctree)/drivers/usb/gadget/",
        "-I$(srctree)/drivers/usb/gadget/function",
        "-I$(DEVICE_MODULES_PATH)/drivers/usb/ss_function/",
    ],
    out = "usb_f_conn_gadget.ko",
)

define_mgk_ddk_ko(
    name = "usb_f_dm",
    srcs = [
        "f_dm.c",
    ],
    copts = [
        "-I$(srctree)/drivers/usb/gadget/",
        "-I$(srctree)/drivers/usb/gadget/function",
        "-I$(DEVICE_MODULES_PATH)/drivers/usb/ss_function/",
    ],
    out = "usb_f_dm.ko",
)

define_mgk_ddk_ko(
    name = "usb_f_ss_mon_gadget",
    srcs = [
        "f_ss_mon_gadget.c",
    ],
    hdrs = glob([
            "f_ss_mon_gadget.h",
    ]),
    includes = ["."],
    copts = [
        "-I$(srctree)/drivers/usb/gadget/",
        "-I$(srctree)/drivers/usb/gadget/function",
        "-I$(DEVICE_MODULES_PATH)/drivers/usb/ss_function/",
    ],
    ko_deps = [
        "//kernel_device_modules-{}/drivers/usb/notify:usb_notify_layer".format(kernel_version),
    ],
    out = "usb_f_ss_mon_gadget.ko",
)


