load("//build/bazel_mgk_rules:mgk_ddk_ko.bzl", "define_mgk_ddk_ko")
load("@mgk_info//:kernel_version.bzl","kernel_version",)

package(
	default_visibility = [
		"//visibility:public",
	],
)

filegroup(
	name = "srcs",
	srcs = glob([
		"**/Makefile",
		"**/Kbuild",
		"**/*.c",
		"**/*.h",
	]),
)

define_mgk_ddk_ko(
	name = "fingerprint_sysfs_hs07",
	srcs = [
		"fingerprint_sysfs.c",
	],
	hdrs = glob(["**/*.h"]),
	includes = ["include"],
	copts = [
		"-Wall",
		"-Werror",
		"-I$(DEVICE_MODULES_PATH)/drivers/misc/mediatek/include/",
		"-I$(DEVICE_MODULES_PATH)/drivers/gpu/drm/mediatek/mediatek_v2/",
	],
)
