load("//build/bazel_mgk_rules:mgk_ddk_ko.bzl", "define_mgk_ddk_ko")
load("@mgk_info//:kernel_version.bzl","kernel_version",)
package(
    default_visibility = [
        "//visibility:public",
    ],
)
filegroup(
	name = "srcs",
	srcs = glob([
		"**/Makefile",
		"**/Kbuild",
		"**/*.c",
		"**/*.h",
	]),
)
define_mgk_ddk_ko(
    name = "hperf",
    srcs = [
        "hperf_main.c",
        "hperf_monitor.c",
        "hperf_handle_event.c",
        "hperf_handle_kinfo.c",
        "hperf_handle_mem.c",
        "hperf_handle_sched.c",
        "hperf_handle_other.c",
        "hperf_handle_power.c"
    ],
    hdrs = glob(["**/*.h"]),
    includes = ["include"],
    copts = [
        "-Wall",
        "-Werror",
        "-I$(DEVICE_MODULES_PATH)/drivers/misc/mediatek/include",
        "-I$(DEVICE_MODULES_PATH)/drivers/misc/mediatek/include/mt-plat",
        "-Wno-frame-larger-than"
    ],
    header_deps = [
        "//kernel_device_modules-{}/drivers/gpu/mediatek/mt-plat:gpu_utility_headers".format(kernel_version),
    ],
	ko_deps = [
        "//kernel_device_modules-{}/drivers/power/supply:mt6358_battery".format(kernel_version),
        "//kernel_device_modules-{}/drivers/gpu/mediatek/gpueb:mtk_gpueb".format(kernel_version),
        "//kernel_device_modules-{}/drivers/gpu/mediatek/gpu_bm:mtk_gpu_qos".format(kernel_version),
        "//kernel_device_modules-{}/drivers/gpu/mediatek/hal:mtk_gpu_hal".format(kernel_version),
        "//kernel_device_modules-{}/drivers/gpu/mediatek/gpufreq/v2:mtk_gpufreq_wrapper".format(kernel_version),
        "//kernel_device_modules-{}/drivers/gpu/drm/mediatek/mediatek_v2:mediatek-drm".format(kernel_version),
        "//kernel_device_modules-{}/drivers/leds:leds-mtk".format(kernel_version),
        "//kernel_device_modules-{}/drivers/memory/mediatek:mtk_dramc".format(kernel_version),
        "//kernel_device_modules-{}/drivers/misc/mediatek/dvfsrc:mtk-dvfsrc-helper".format(kernel_version)
	],
)