load("//build/bazel_mgk_rules:mgk_ddk_ko.bzl", "define_mgk_ddk_ko")
load("//build/kernel/kleaf:kernel.bzl", "ddk_headers")
load("@mgk_info//:kernel_version.bzl", "kernel_version",)

package(
    default_visibility = [
        "//visibility:public",
    ],
)

# add ddk_headers to export headers for other modules to use in the future
ddk_headers(
    name = "ddk_public_headers",
    includes = ["."],
    hdrs = glob(["**/*.h"]), # export all headers for other modules to use
)

filegroup(
    name = "ddk_kconfigs",
    srcs = glob([
        "**/Kconfig",
    ]),
)

filegroup(
    name = "srcs",
    srcs = glob([
          "**/Makefile",
          "**/Kbuild",
          "**/*.c",
          "**/*.h",
    ]),
)

define_mgk_ddk_ko(
    name = "snd-soc-aw87xxx",
    srcs = [
        "aw87xxx.c",
        "aw87xxx_acf_bin.c",
        "aw87xxx_bin_parse.c",
        "aw87xxx_device.c",
        "aw87xxx_dsp.c",
        "aw87xxx_monitor.c",
    ],
    header_deps = [
        "//kernel_device_modules-{}/sound/soc/mediatek/common:ddk_public_headers".format(kernel_version),
    ],
    hdrs = glob([
        "aw87xxx.h",
        "aw87xxx_dsp.h",
        "aw87xxx_bin_parse.h",
        "aw87xxx_device.h",
        "aw87xxx_monitor.h",
        "aw87xxx_acf_bin.h",
        "aw87xxx_log.h",
        "aw87xxx_platform.h",
    ]),
    includes = ["."],
)

