load("//build/bazel_mgk_rules:mgk_ddk_ko.bzl", "define_mgk_ddk_ko")
load("@mgk_info//:kernel_version.bzl", "kernel_version")
package(
    default_visibility = [
        "//visibility:public",
    ],
)
filegroup(
    name = "ddk_kconfigs",
    srcs = glob([
        "**/Kconfig",
    ]),
)
filegroup(
    name = "ddk_makefile",
    srcs = glob([
        "**/Makefile",
        "**/Kbuild",
        "**/*.c",
        "**/*.h",
    ]),
)
PANELS = [
    "lcd_hx83102e_lc_hkc_video_hst11",
    "lcd_hx83102g_xy_inx_video",
    "lcd_jd9366tc_xy_csot_video",
    "lcd_jd9366tc_lx_hkc_video",
    "lcd_jd9366tc_ld_hkc_video",
    "lcd_default_mipi_fhd_video_hst11",
]
[define_mgk_ddk_ko(
    name = "{}".format(p),
    srcs = [
        "{}.c".format(p),
    ],
    header_deps = [
        "//kernel_device_modules-{}/drivers/gpu/drm/mediatek/mediatek_v2:ddk_public_headers".format(kernel_version),
    ],
    hdrs = glob([
        "**/*.h".format(p),
    ]),
    includes = ["."],
    ko_deps = [
        "//kernel_device_modules-{}/drivers/gpu/drm/mediatek/mediatek_v2:mtk_panel_ext".format(kernel_version),
	"//kernel_device_modules-{}/drivers/gpu/drm/panel:panel-bias-hst11".format(kernel_version),
    ],
) for p in PANELS]
