load("//build/bazel_mgk_rules:mgk_ddk_ko.bzl", "define_mgk_ddk_ko")
load("@mgk_info//:kernel_version.bzl","kernel_version",)

package(
	default_visibility = [
		"//visibility:public",
	],
)

filegroup(
	name = "srcs",
	srcs = glob([
		"**/Makefile",
		"**/Kbuild",
		"**/*.c",
		"**/*.h",
	]),
)

define_mgk_ddk_ko(
	name = "silead_fingerprint_hs07",
	srcs = [
		"silead_fp_spi.c",
		"silead_fp_stub.c",
		"silead_fp.c",
	],
	hdrs = glob(["**/*.h"]),
	includes = ["include"],
	copts = [
		"-Wall",
		"-Werror",
		"-DBSP_SIL_PLAT_MTK",
		"-I$(DEVICE_MODULES_PATH)/drivers/misc/mediatek/include/",
		"-I$(DEVICE_MODULES_PATH)/drivers/gpu/drm/mediatek/mediatek_v2/",
		"-I$(DEVICE_MODULES_PATH)/drivers/misc/mediatek/include/mt-plat/$(MTK_PLATFORM)/include/",
		"-I$(DEVICE_MODULES_PATH)/drivers/misc/mediatek/include/mt-plat/",
		"-I$(DEVICE_MODULES_PATH)/drivers/spi/mediatek/$(MTK_PLATFORM)/",
	],
	#A07 LTE_BOS code for AL7761C-1 by dingying at 20250804 start
	ko_deps = [
		"//kernel_device_modules-{}/drivers/spi:spi-mt65xx".format(kernel_version),
		"//kernel_device_modules-{}/drivers/input/fingerprint/hs07:fingerprint_sysfs_hs07".format(kernel_version),
		"//kernel_device_modules-{}/drivers/gpu/drm/mediatek/mediatek_v2:mtk_disp_notify".format(kernel_version),
	],
	#A07 LTE_BOS code for AL7761C-1 by dingying at 20250804 end
)
