load("//build/bazel_mgk_rules:mgk_ddk_ko.bzl", "define_mgk_ddk_ko")
load("@mgk_info//:kernel_version.bzl","kernel_version",)
load("//build/kernel/kleaf:kernel.bzl", "ddk_headers")

package(
    default_visibility = [
        "//visibility:public",
    ],
)

define_mgk_ddk_ko(
    name = "touch_common_hs07",
    copts = [
        "-I$(DEVICE_MODULES_PATH)/drivers/misc/mediatek/include/",
    ],

    ko_deps = [
        "//kernel_device_modules-{}/drivers/gpu/drm/mediatek/mediatek_v2:mtk_disp_notify".format(kernel_version),
        "//kernel_device_modules-{}/drivers/gpu/drm/mediatek/mediatek_v2:mtk_panel_ext".format(kernel_version),
        "//kernel_device_modules-{}/drivers/spi:spi-mt65xx".format(kernel_version),
        "//kernel_device_modules-{}/drivers/input/touchscreen/tui_common:tui-common".format(kernel_version),
        "//kernel_device_modules-{}/drivers/input/keyboard:mtk-kpd".format(kernel_version),
        "//kernel_device_modules-{}/drivers/samsung/debug:sec_debug".format(kernel_version),
        "//kernel_device_modules-{}/drivers/samsung/debug:sec_extra_info".format(kernel_version),
        "//kernel_device_modules-{}/drivers/samsung:sec_reboot".format(kernel_version),
        "//kernel_device_modules-{}/drivers/samsung:sec_reset".format(kernel_version),
        "//kernel_device_modules-{}/drivers/samsung:sec_ext".format(kernel_version),
        "//kernel_device_modules-{}/drivers/samsung:sec_bootstat".format(kernel_version),
    ],
    header_deps = [
        "//kernel_device_modules-{}/drivers/gpu/drm/mediatek/mediatek_v2:ddk_public_headers".format(kernel_version),
        "//kernel_device_modules-{}/drivers/misc/mediatek/eccci:ccci_header".format(kernel_version),
        "//kernel_device_modules-{}/drivers/misc/mediatek/eccci/fsm:ccci_fsm_header".format(kernel_version),
    ],
)

ddk_headers(
	name = "touch_common_header",
	hdrs = glob([
		"**/*.h",
	]),
	includes = ["."],
)
