load("//build/bazel_mgk_rules:mgk_ddk_ko.bzl", "define_mgk_ddk_ko")
load("@mgk_info//:kernel_version.bzl","kernel_version",)

package(
    default_visibility = [
        "//visibility:public",
    ],
)

define_mgk_ddk_ko(
    name = "jdchipset",
    local_defines = ["CONFIG_TOUCHSCREEN_JADARD_DEBUG","CONFIG_TOUCHSCREEN_JADARD_SORTING","__JADARD_KMODULE__",],
    copts = [
        "-I$(DEVICE_MODULES_PATH)/drivers/misc/mediatek/include/",
    ],

    ko_deps = [
        "//kernel_device_modules-{}/drivers/gpu/drm/mediatek/mediatek_v2:mtk_disp_notify".format(kernel_version),
        "//kernel_device_modules-{}/drivers/gpu/drm/mediatek/mediatek_v2:mtk_panel_ext".format(kernel_version),
        "//kernel_device_modules-{}/drivers/spi:spi-mt65xx".format(kernel_version),
        "//kernel_device_modules-{}/drivers/input/touchscreen/tui_common:tui-common".format(kernel_version),
        "//kernel_device_modules-{}/drivers/input/keyboard:mtk-kpd".format(kernel_version),
        "//kernel_device_modules-{}/drivers/input/touchscreen/hst11/touch_common:touch_common_hst11".format(kernel_version),
        "//kernel_device_modules-{}/drivers/gpu/drm/panel:panel-bias-hst11".format(kernel_version),
	"//kernel_device_modules-{}/drivers/misc/mediatek/extcon:extcon-mtk-usb".format(kernel_version),
	"//kernel_device_modules-{}/drivers/power/supply:mtk_charger_framework".format(kernel_version),
    ],
    header_deps = [
        "//kernel_device_modules-{}/drivers/gpu/drm/mediatek/mediatek_v2:ddk_public_headers".format(kernel_version),
        "//kernel_device_modules-{}/drivers/misc/mediatek/eccci:ccci_header".format(kernel_version),
        "//kernel_device_modules-{}/drivers/misc/mediatek/eccci/fsm:ccci_fsm_header".format(kernel_version),
        "//kernel_device_modules-{}/drivers/input/touchscreen/hst11/touch_common:touch_common_header".format(kernel_version),
	"//kernel_device_modules-{}/drivers/power/supply:mtk_charger_header".format(kernel_version),
    ],
)
